syntax = "proto3";
package reapchain.types;

option go_package = "github.com/reapchain/reapchain-core/proto/podc/types";

import "gogoproto/gogo.proto";
import "podc/crypto/keys.proto";

message SteeringMemberCandidate {
  reapchain.crypto.PublicKey pub_key  = 1 [(gogoproto.nullable) = false];
  bytes address                       = 2;
  int64                       voting_power      = 3;
}

message SteeringMemberCandidateSet {
  repeated SteeringMemberCandidate steering_member_candidates  = 1;
}
