syntax = "proto3";
package reapchain.rpc.grpc;
option  go_package = "github.com/reapchain/reapchain-core/rpc/grpc;coregrpc";

import "reapchain/abci/types.proto";

//----------------------------------------
// Request types

message RequestPing {}

message RequestBroadcastTx {
  bytes tx = 1;
}

//----------------------------------------
// Response types

message ResponsePing {}

message ResponseBroadcastTx {
  reapchain.abci.ResponseCheckTx   check_tx   = 1;
  reapchain.abci.ResponseDeliverTx deliver_tx = 2;
}

//----------------------------------------
// Service Definition

service BroadcastAPI {
  rpc Ping(RequestPing) returns (ResponsePing);
  rpc BroadcastTx(RequestBroadcastTx) returns (ResponseBroadcastTx);
}
